2012-11-29  Richard Biener  <rguenther@suse.de>

	* tree-ssa-pre.c (get_expr_value_id): Do not add expr
	to the set of value expressions here.
	(add_to_exp_gen, make_values_for_phi): Fold into ...
	(compute_avail): ... here, and avoid useless work.  Dump
	avail sets in processing order.
	(do_pre): Do not dump avail sets here.

2012-11-29  Matthew Gretton-Dann  <matthew.gretton-dann@linaro.org>

	PR target/54974
	* config/arm/arm.md (thumb2_pool_range, pool_range): Add comment on
	Thumb pool ranges.
	(thumb1_extendhisi2): Reduce Thumb pool range.
	(arm_movdi): Likewise.
	(thumb1_movdi_insn): Likewise.
	(thumb1_movsi_insn): Likewise.
	(pic_load_addr_unified): Likewise.
	(pic_load_addr_32bit): Likewise.
	(pic_load_addr_thumb1): Likewise.
	(thumb1_movhf): Likewise.
	(arm_movsf_soft_insn): Likewise.
	(thumb1_movsf_soft_insn): Likewise.
	(movdf_soft_insn): Likewise.
	(thumb1_movdf_soft_insn): Likewise.
	* config/arm/neon.md (*neon_mov<mode>): Likewise.
	(*neon_mov<mode>): Likwise.
	* config/arm/thumb2.md: (*thumb2_movsi_insn): Likewise.
	(*thumb2_movhi_insn): Likewise.
	(*thumb2_extendqisi_v6): Likewise.
	(*thumb2_zero_extendqisi_v6): Likewise.
	(*thumb2_zero_extendqisi2_v6): Likewise.
	* config/arm/vfp.md: (*thumb2_movsi_vfp): Likewise.
	(*movdi_vfp): Likewise.
	(*movdi_vfp_cortexa8): Likewise.
	(*thumb2_movsf_vfp): Likewise.
	(*thumb2_movdf_vfp): Likewise.

2012-11-29  Kai Tietz  <ktietz@redhat.com>

	PR target/55171
	* i386.c (get_scratch_register_on_entry): Handle
	thiscall-convention.
	(split_stack_prologue_scratch_regno): Likewise.
	(ix86_static_chain): Likewise.
	(x86_output_mi_thunk): Likewise.

2012-11-29  Marek Polacek  <polacek@redhat.com>

	* cprop.c (bypass_block): Improve debug message.

2012-11-29  Oleg Raikhman  <oleg@adapteva.com>

	* config/epiphany/epiphany.h (FIXED_REGISTERS, CALL_USED_REGISTERS):
	Make r40..r43 call-used.
	(REG_ALLOC_ORDER): Sort r40..r43 into the call-used registers.

2012-11-29  Joern Rennecke  <joern.rennecke@embecosm.com>
