@@ -1,3 +1,8 @@
+2012-11-29  Marc Glisse  <marc.glisse@inria.fr>
+
+	PR c++/53094
+	* fold-const.c (fold): Replace a CONSTRUCTOR with a VECTOR_CST.
+
 2012-11-29  Richard Biener  <rguenther@suse.de>
 
 	* tree-ssa-pre.c (get_expr_value_id): Do not add expr
